k8s/bases/gitea/helm.yaml
---
# Source: gitea/charts/mariadb/templates/master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-mariadb
  labels:
    app: "mariadb"
    component: "master"
    chart: "mariadb-7.3.0"
    release: "izel"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: "mariadb"
    component: "master"
    release: "izel"
---
# Source: gitea/templates/gitea/gitea-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-gitea-http
  labels:
    app: izel-gitea
    chart: "gitea-1.3.3"
    release: "izel"
    heritage: "Helm"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: izel-gitea
---
# Source: gitea/templates/gitea/gitea-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-gitea-ssh
  labels:
    app: izel-gitea
    chart: "gitea-1.3.3"
    release: "izel"
    heritage: "Helm"
spec:
  type: LoadBalancer
  ports:
  - name: ssh
    port: 22
    targetPort: ssh
  selector:
    app: izel-gitea
---
# Source: gitea/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-gitea
  labels:
    app: izel-gitea
    chart: "gitea-1.3.3"
    release: "izel"
    heritage: "Helm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: izel-gitea
  template: 
    metadata:
      labels:
        app: izel-gitea
    spec:
      containers:
            
      - name: gitea
        image: gitea/gitea:1.10.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 3000
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 200
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
                limits:
                  cpu: 1
                  memory: 1Gi
                requests:
                  cpu: 300m
                  memory: 500Mi
        volumeMounts:
        - name: gitea-data
          mountPath: /data
        - name: gitea-config
          mountPath: /etc/gitea
            
      - name: memcached
        image: memcached:1.5.19-alpine
        imagePullPolicy: IfNotPresent
        command:
          - memcached
          - -m 64
          - -o
          - modern
          - -v
        ports:
        - name: memcache
          containerPort: 11211
        livenessProbe:
          tcpSocket:
            port: memcache
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: memcache
          initialDelaySeconds: 5
          timeoutSeconds: 1
        securityContext:
          runAsUser: 1000
        resources:
                requests:
                  cpu: 50m
                  memory: 64Mi
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
         claimName: izel-gitea
      - name: gitea-config
        configMap:
          name: izel-gitea
---
# Source: gitea/charts/mariadb/templates/master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: izel-mariadb
  labels:
    app: mariadb
    chart: mariadb-7.3.0
    release: izel
    heritage: Helm
    component: master
spec:
  selector:
    matchLabels:
      app: mariadb
      release: izel
      component: master
  serviceName: izel-mariadb
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mariadb
        chart: mariadb-7.3.0
        release: izel
        component: master
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: mariadb
                    release: izel      
      containers:
        - name: "mariadb"
          image: docker.io/bitnami/mariadb:10.3.20-debian-9-r19
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MARIADB_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]; then
                      password_aux=$(cat $MARIADB_ROOT_PASSWORD_FILE)
                  fi
                  mysqladmin status -uroot -p$password_aux
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: izel-mariadb
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: "mariadb"
          component: "master"
          release: "izel"
          heritage: "Helm"
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: gitea/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: izel-gitea
  labels:
    app: "izel-gitea"
    chart: "gitea-1.3.3"
    release: "izel"
    heritage: "Helm"
  annotations:
    certmanager.k8s.io/acme-challenge-type: "http01"
    certmanager.k8s.io/cluster-issuer: "gitea-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: git.izelnakri.com
    http:
      paths:
      - path: /
        backend:
          serviceName: izel-gitea-http
          servicePort: 3000
  tls:
    - hosts:
      - git.izelnakri.com
      secretName: gitea-tls
---
# Source: gitea/charts/mariadb/templates/test-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "izel-mariadb-test-q2fq1"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: mariadb-test
      image: docker.io/bitnami/mariadb:10.3.20-debian-9-r19
      imagePullPolicy: "IfNotPresent"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: izel-mariadb-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never
